--- a/src/css/style.css
+++ b/src/css/style.css
@@ -57,7 +57,8 @@ body {
 }
 
 .movie {
-  width: 220px;
+  width: 240px;
+  padding: 10px;
   cursor: pointer;
   transition: all 0.2s ease;
   position: relative;
@@ -113,12 +114,18 @@ body {
   margin-bottom: 5px;
 }
 
-.movie__genre {
+.movie__genre,
+.modal__movie--genre {
   font-size: 14px;
   font-weight: 400;
   color: #ffa500;
   text-decoration: none;
   text-transform: capitalize;
+}
+
+.modal__movie--genre,
+.modal__link {
+  margin-bottom: 5px;
 }
 
 .movie__rating {
@@ -170,4 +177,75 @@ body {
 
 .movie__rating--orange {
   border: 1px solid orange;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 100;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: width 2s;
+}
+
+.modal__movie--site {
+  background: #aa4b6b;
+  background: -webkit-linear-gradient(to right, #3b8d99, #6b6b83, #aa4b6b);
+  background: linear-gradient(to right, #3b8d99, #6b6b83, #aa4b6b);
+
+  padding: 5px;
+  border-radius: 15px;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.modal__show {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal__card {
+  background-color: #ffffff;
+  width: 600px;
+  padding: 30px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
+  background-color: #1a191f;
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+}
+.modal__movie-backdrop {
+  width: 200px;
+  margin: 0 auto;
+  margin-bottom: 10px;
+}
+.modal__movie-info {
+  margin-left: 20px;
+}
+
+.modal__movie--runtime {
+  margin-bottom: 5px;
+}
+.modal__button-close {
+  padding: 5px;
+  margin: 10px;
+  align-self: center;
+  cursor: pointer;
+  border-radius: 5px;
+  border: none;
+}
+
+.modal > ul li {
+  padding: 5px;
+}
+
+.stop-scrolling {
+  height: 100%;
+  overflow: hidden;
 }
